--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>SystemJS</title>
+        <link rel="stylesheet" href="./core/styles/global.css">
     </head>
     <body>
         <view-port scope-name="default"></view-port>
