--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>SystemJS</title>
         <link rel="stylesheet" href="./core/styles/global.css">
+        <link rel="stylesheet" href="./core/styles/google-material-icons.css">
     </head>
     <body>
         <view-port scope-name="default"></view-port>
