--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>SystemJS</title>
-        <link rel="stylesheet" href="./core/styles/global.css">
-        <link rel="stylesheet" href="./core/styles/google-material-icons.css">
+        <link rel="stylesheet" href="./styles/global.css">
+        <link rel="stylesheet" href="./styles/google-material-icons.css">
     </head>
     <body>
         <template id="main-view" replace>
