rebrand to Workbox

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,10 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>SystemJS</title>
+        <title>Workbox</title>
         <link rel="stylesheet" href="./styles/global.css">
         <link rel="stylesheet" href="./styles/google-material-icons.css">
+        <link rel="icon" type="image/svg+xml" href="./userSpace/theme/icons/icon-pre-composed.svg">
     </head>
     <body>
         <template id="main-view" replace>
