--- a/src/packages/workbox.about/template.html
+++ b/src/packages/workbox.about/template.html
@@ -6,7 +6,8 @@
 </style>
 
 <div class="about-system">
-    <h2>SystemJS v1.0.0</h2>
+    <h2>Workbox v1.1.0</h2>
+    <img src="userSpace/theme/icons/icon-pre-composed.svg" height="150">
     <h4>by Jovan Gerodetti (TitanNano)</h4>
     <h5>built with ApplicationFrame and AF-DataBinding</h5>
 </div>
